fixing check button on safari mobile

--- a/index.css
+++ b/index.css
@@ -90,8 +90,9 @@ body {
 
 .content__list__item__check {
 	position: absolute;
+	padding: 0;
+	margin: 0;
 	left: 10px;
-	right: auto;
 	top: 13px;
 	width: 20px;
 	height: 20px;
